@@ -85,6 +85,8 @@ public:
 	void update_state();
 	void store_window_location();
 
+	bool show_human_names() const { return _menu_view_human_names->get_active(); }
+
 protected:
 	void connect_widgets();
 
@@ -97,6 +99,7 @@ protected:
 	void on_show_messages();
 	void on_view_legend();
 	void on_store_positions();
+	void on_view_human_names();
 	void on_zoom_in();
 	void on_zoom_out();
 	void on_zoom_normal();
@@ -152,6 +155,7 @@ protected:
 	Widget<Gtk::MenuItem>       _menu_view_messages;
 	Widget<Gtk::CheckMenuItem>  _menu_view_legend;
 	Widget<Gtk::MenuItem>       _menu_view_refresh;
+	Widget<Gtk::CheckMenuItem>  _menu_view_human_names;
 	Widget<Gtk::ImageMenuItem>  _menu_zoom_in;
 	Widget<Gtk::ImageMenuItem>  _menu_zoom_out;
 	Widget<Gtk::ImageMenuItem>  _menu_zoom_normal;
